# CC-MedAuth

./: .dockerignore  .env  .gitignore  .travis.yml  Dockerfile  Dockerfile.cliente  Dockerfile.despliegue  Dockerfile.despliegue.dockerignore  README.md  cc.yaml  docker-compose.yml  issues.txt  provisionamiento.sh  requirements.txt  shippable.yml  tasks.py  test_docker_compose.sh
.circleci/: config.yml
.github/workflows/: check-yaml.yaml  github_actions_CI.yml  github_container_registry.yml
citas/: .gitignore  Logger.py  User.py  UserManager.py
doc/: Makefile  arquitectura.md  avance_codigo.md  avance_codigo_2.md  avance_codigo_3.md  avance_codigo_4.md  biblioteca_asercion.md  config_entorno.md  descripcion_problema.md  estudio_contenedor_base.md  gestor_tareas.md  justificacion_herramientas.md  marco_pruebas.md  modelo_inicial.md  pyproject.toml  roadmap.md  test_sugerencias.md
doc/api/: config_distribuida.md  despliegue.md  doc_api.md  estudio_framework.md  logs.md
doc/composicion/: benchmarks.md  cluster.md  composicion.md  contenedores.md  despliegue.md  tests.md
doc/estudio_docker/: documentacion_docker_hub.md  documentacion_dockerfile.md  estudio_contenedor_base.md  focal_vs_bionic.md  github_container_registry.md
doc/integracion_continua/: configuracion_circleci.md  configuracion_github_action.md  configuracion_shippable.md  configuracion_travis.md  estudio_ci.md  justificacion_docker.md  justificacion_invoke.md
src/: client.py  main.py
src/core/: Usuario.py  __init__.py  api.py  autorizacion.py  cita.py  controlador.py  especialidad.py  main.py  (+9 more)
(+41 files in other folders)
